--- a/index.html
+++ b/index.html
@@ -10,21 +10,8 @@
     </style>
 </head>
 <body>
-    <div class="container">
-        <h1>Intercative Game Quiz</h1>
-        <div class="question" id="question">What is the capital of pakistan?</div>
-        <div class="choices">
-            <button onclick="checkAnswer(this)" data-answer="peshawar">peshawar</button>
-            <button onclick="checkAnswer(this)" data-answer="Karachi">Karachi</button>
-            <button onclick="checkAnswer(this)" data-answer="Multan">Multan</button>
-            <button onclick="checkAnswer(this)" data-answer="Multan">Multan</button>
-        </div>
-        <div class="score">Score: <span id="score">0</span></div>
-        <button class="next-btn" onclick="nextQuestion()">Next Question</button>
-    </div>
+   
 
-    <script>
-       
-    </script>
+   <script src="./script.js"></script>
 </body>
 </html>
