adding function to the script file

--- a/index.html
+++ b/index.html
@@ -3,15 +3,26 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Simple Quiz</title>
+    <title>Interactive Quiz Game</title>
     <link rel="stylesheet" href="style.css">
-    <style>
-       
-    </style>
 </head>
 <body>
-   
-
-   <script src="./script.js"></script>
+    <div class="quiz-container">
+        <h1>Interactive Game Quiz</h1>
+        <div id="question-area">
+            <p id="question">Question Area</p>
+            <div id="answer-buttons" class="btn-grid">
+                <button class="btn">Answer 1</button>
+                <button class="btn">Answer 2</button>
+                <button class="btn">Answer 3</button>
+                <button class="btn">Answer 4</button>
+            </div>
+        </div>
+        <div id="score-area">
+            <p>Score: <span id="score">0</span></p>
+        </div>
+        <button id="next-btn" class="next-btn btn">Next Question</button>
+    </div>
+    <script src="script.js"></script>
 </body>
 </html>
